Improve resume page Standardized bullet points on resume. Convert fractional inches to points (1in = 72pt) on resume to reduce some CSS rounding errors. Fix resume background in IE8. Fix superscript line height on resume in IE8. Fit first part of role on same line as organization if role is too long and requires a line break on resume mobile layout. Use HTML entities on resume. Fix sans-serif fallback font on the font stack.

--- a/common.css
+++ b/common.css
@@ -34,7 +34,7 @@ html {
 }
 
 body {
-	font: 12pt 'Calibri','Carlito','sans-serif';
+	font: 12pt 'Calibri','Carlito',sans-serif;
 	position: relative;
 	min-height: 100%;
 }
