--- a/resume.mobile.css
+++ b/resume.mobile.css
@@ -44,6 +44,7 @@
 		width: auto;
 /*		display: block;*/
 
+		float: left;
 		display: inline-block;
 	}
 
@@ -51,9 +52,8 @@
 		width: auto;
 		display: block;
 		border: none;
-/*		float: none;*/
+		float: none;
 
-		float: right;
 		text-align: right;
 	}
 
@@ -82,6 +82,7 @@
 		width: auto;
 		float: none;
 		position: static;
+		left: 0;
 	}
 
 	li.leftalign2col {
